# Checkers

./: .gitignore  CMakeLists.txt  settings.json  vcpkg.json
Game/: Board.h  Config.h  Game.h  Hand.h  Logic.h
Models/: Move.h  Project_path.h  Response.h
